# sietch-dune-server-manager

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/binaries/: README.md
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: config_store.rs  dto.rs  lib.rs  log_file.rs  logging.rs  main.rs  models.rs  security.rs  setup.rs  ssh.rs  state.rs
app/src-tauri/src/commands/: battlegroup.rs  component.rs  discovery.rs  host_health.rs  logs.rs  management_api.rs  management_service.rs  mod.rs  preflight.rs  shared.rs  status.rs  status_data.rs  status_helpers.rs  status_naming.rs  tunnel.rs  tunnel_helpers.rs  vm.rs
app/src-tauri/src/models/: config.rs  setup.rs
crates/dune-manager-core/: Cargo.toml
crates/dune-manager-core/src/: cli.rs  environment.rs  errors.rs  lib.rs  models.rs  operation_log.rs  security.rs  shell.rs  toolchain.rs  validation.rs
crates/dune-manager-core/src/cli/: args.rs  dispatch.rs  mod.rs
crates/dune-manager-core/src/orchestration/: battlegroup_kubernetes.rs  battlegroup_management.rs  dune_vm_detection.rs  experimental_swap.rs  guest_bootstrap.rs  guest_bootstrap_ssh.rs  guest_ssh.rs  hyperv_bridge.rs  hyperv_initial_setup.rs  hyperv_lifecycle.rs  hyperv_setup.rs  instance_management.rs  kubernetes_ssh.rs  manager_api_installer.rs  mod.rs  openssh_runner.rs  providers.rs  proxmox.rs  strict_command.rs  ubuntu_ssh_setup.rs  vendor_flows.rs  vendor_hyperv_setup.rs
crates/dune-manager-core/src/orchestration/battlegroup_kubernetes/: mod.rs  ops.rs  ops_tests.rs  region_patch.rs  types.rs
crates/dune-manager-core/src/orchestration/battlegroup_management/: lifecycle.rs  lifecycle_tests.rs  mod.rs  models.rs  update.rs
crates/dune-manager-core/src/orchestration/battlegroup_wrapper/: mod.rs  status_parser.rs  wrapper.rs
crates/dune-manager-core/src/orchestration/experimental_swap/: mod.rs  models.rs  orchestrator.rs  patch.rs  scripts.rs
crates/dune-manager-core/src/orchestration/guest_bootstrap/: mod.rs  orchestrator.rs  orchestrator_tests.rs  plan.rs
crates/dune-manager-core/src/orchestration/guest_bootstrap_ssh/: image_patching.rs  mod.rs  provider.rs  scripts.rs  scripts_kubernetes.rs  world_creation.rs
crates/dune-manager-core/src/orchestration/hyperv_bridge/: bridge.rs  host_operations.rs  mod.rs  tests.rs  vm_operations.rs
crates/dune-manager-core/src/orchestration/hyperv_initial_setup/: mod.rs  orchestrator.rs  player_address.rs  request.rs  tests.rs  wait.rs
crates/dune-manager-core/src/orchestration/hyperv_setup/: events.rs  mod.rs  models.rs  orchestrator.rs  vm_import.rs
crates/dune-manager-core/src/orchestration/instance_management/: count_models.rs  display_name_helpers.rs  display_name_models.rs  instance_map.rs  mod.rs  orchestrator.rs  orchestrator_helpers.rs  shell.rs  tests_display_name.rs  tests_fixtures.rs  tests_instance_count.rs
crates/dune-manager-core/src/orchestration/providers/: mod.rs  (+6 more)
crates/dune-manager-core/src/toolchain/: manager.rs  mod.rs  package_detection.rs  package_status.rs  path_defaults.rs  ssh_key.rs  ssh_key_paths.rs  ssh_key_rotation.rs  tool_models.rs  vdf.rs
crates/dune-server-service/: Cargo.toml
crates/dune-server-service/data/: journey-nodes.json
crates/dune-server-service/openrc/: dune-server-service
crates/dune-server-service/src/: config.rs  lib.rs  main.rs  systemd_compat.rs
crates/dune-server-service/src/admin/: data.rs  mod.rs  mq.rs  players.rs
crates/dune-server-service/src/http/: api_admin.rs  api_runs.rs  mod.rs
crates/dune-server-service/src/kubectl/: battlegroup.rs  battlegroup_cli.rs  cluster.rs  mod.rs  steam.rs
crates/dune-server-service/src/postgres/: conn.rs  mod.rs  queries.rs
crates/dune-server-service/src/scheduler/: mod.rs  runner.rs  schedule.rs  task.rs  timezone.rs
crates/dune-server-service/src/store/: admin_history.rs  mod.rs  pending.rs  runs.rs  welcome.rs
crates/dune-server-service/src/tasks/: backup.rs  mod.rs  restart.rs  restart_notice.rs  update_apply.rs  update_check.rs  welcome_package.rs
crates/dune-server-service/systemd/: dune-server-service.service
manager-api/: Cargo.toml
manager-api/k8s/: manager-api.yaml
manager-api/src/: auth.rs  config.rs  config_files_domain.rs  database_domain.rs  director_domain.rs  director_proxy.rs  errors.rs  kubernetes_domain.rs  main.rs  models.rs  openapi.rs  routes.rs  security.rs  state.rs  validation.rs
manager-api/src/models/: battlegroup.rs  common.rs  config.rs  database.rs  director.rs  kubernetes.rs  query.rs
(+235 files in other folders)
