[package]
name = "dune-manager-api"
version = "0.1.4"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
futures = "0.3"
json-patch = "2.0"
k8s-openapi = { version = "0.23", features = ["v1_30"] }
kube = { version = "0.95", features = ["client", "runtime", "rustls-tls", "ws"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "2.6"
tokio = { version = "1.40", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa-swagger-ui = { version = "8.1.0", features = ["axum", "vendored"] }
