[package]
name = "dune-server-service"
version = "0.3.16"
edition = "2021"
publish = false
description = "Dune dedicated-server management daemon: scheduled maintenance + admin command API."

[[bin]]
name = "dune-server-service"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "process", "fs", "io-util", "sync", "time"] }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio", "query"] }
tower-http = { version = "0.6", features = ["trace"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-postgres = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
base64 = "0.22"
once_cell = "1"
regex = "1"
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
cron = "0.12"
